DB service changes added

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <h1>Demo User-Profile application.</h1>
-    Name <input type="text" id="input-name" value="Deepu">
-    <hr/> Email <input type="email" id="input-email" value="deepuke@gmail.com">
-    <hr/> Interests <input type="text" id="input-interests" value="Photography, Badminton, Programing">
+    Name <input type="text" id="input-name" value="D1234213eepu">
+    <hr/> Email <input type="email" id="input-email" value="234124@gmail.com">
+    <hr/> Interests <input type="text" id="input-interests" value="test rtest">
     <hr/>
     <button onclick="saveProfile()">Save Profile</button>
 
